Disambiguate error code
